# SnakeGame

./: CMakeLists.txt  Main.cpp  README.ifyouwish.txt  Setup.txt  todo.note
Source/: Food.cpp  Game.cpp  Snake.cpp
Source/Header/: Food.hpp  Game.hpp  GameOver.hpp  Snake.hpp
